# Core

./: .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/cmake/: Config.cmake
Engine/docs/: CodeStyle.md
Engine/sources/core/: algorithm.hpp  array_ptr.hpp  assert.cpp  assert.hpp  basic_types_printer.cpp  bucket_array.hpp  bucket_list.hpp  core.hpp  log.hpp  move.hpp  noncopyable.hpp  nullable.hpp  pair.hpp  print.cpp  print.hpp  printer.hpp  push_array.hpp  raw_var.hpp  span.hpp  string.cpp  string.hpp  subsystem.cpp  subsystem.hpp  template.hpp  time_quant.cpp  time_quant.hpp  types.hpp  validable.hpp
Engine/sources/core/math/: linear.hpp  matrix4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
Engine/sources/core/memory/: allocator.hpp  linear_allocator.cpp  linear_allocator.hpp  stack_allocator.cpp  stack_allocator.hpp
Engine/sources/graphics/: batch_renderer_2d.cpp  batch_renderer_2d.hpp  color.cpp  color.hpp  image.cpp  image.hpp  image_loader.cpp  image_loader.hpp  render_window.cpp  render_window.hpp  renderer_2d.cpp  renderer_2d.hpp  texture.cpp  texture.hpp
Engine/sources/graphics/api/: cpu_buffer.cpp  cpu_buffer.hpp  cpu_texture.hpp  descriptor_set.cpp  descriptor_set.hpp  dma.cpp  dma.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  gpu_buffer.cpp  gpu_buffer.hpp  gpu_command_buffer.cpp  gpu_command_buffer.hpp  gpu_configuration.cpp  gpu_configuration.hpp  gpu_context.cpp  gpu_context.hpp  gpu_texture.cpp  gpu_texture.hpp  graphics_api.cpp  graphics_api.hpp  graphics_api_loader.cpp  graphics_api_loader.hpp  graphics_api_vtable.hpp  graphics_context.cpp  graphics_context.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  logical_gpu.cpp  logical_gpu.hpp  physical_gpu.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  swapchain.cpp  (+3 more)
Engine/sources/graphics/imgui/: imgui_backend.cpp  imgui_backend.hpp
Engine/sources/graphics/opengl/: cpu_buffer_impl.cpp  cpu_buffer_impl.hpp  debug.hpp  descriptor_set_impl.cpp  descriptor_set_impl.hpp  dma_impl.cpp  dma_impl.hpp  framebuffer_impl.cpp  framebuffer_impl.hpp  gpu_buffer_impl.cpp  gpu_buffer_impl.hpp  gpu_context_impl.cpp  gpu_context_impl.hpp  gpu_texture_impl.cpp  gpu_texture_impl.hpp  graphics_api_impl.cpp  graphics_api_impl.hpp  graphics_api_vtable.cpp  graphics_context_impl.cpp  graphics_context_impl.hpp  graphics_pipeline_impl.cpp  graphics_pipeline_impl.hpp  logical_gpu_impl.cpp  logical_gpu_impl.hpp  render_pass_impl.cpp  render_pass_impl.hpp  sampler_impl.cpp  sampler_impl.hpp  shader_impl.cpp  shader_impl.hpp  swapchain_impl.cpp  swapchain_impl.hpp  texture_impl.cpp  texture_impl.hpp
Engine/sources/graphics/vulkan/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  cpu_buffer_impl.cpp  cpu_buffer_impl.hpp  debug.cpp  debug.hpp  descriptor_set_impl.cpp  descriptor_set_impl.hpp  dma_impl.cpp  dma_impl.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  framebuffer_impl.cpp  framebuffer_impl.hpp  gpu.cpp  gpu.hpp  gpu_buffer_impl.cpp  gpu_buffer_impl.hpp  gpu_context_impl.cpp  gpu_context_impl.hpp  gpu_memory_allocator.cpp  gpu_memory_allocator.hpp  gpu_texture_impl.cpp  gpu_texture_impl.hpp  graphics_api_impl.cpp  graphics_api_impl.hpp  graphics_api_vtable.cpp  graphics_context_impl.cpp  graphics_context_impl.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  graphics_pipeline_impl.cpp  graphics_pipeline_impl.hpp  instance.cpp  (+33 more)
Engine/sources/main/: application.cpp  application.hpp  engine.cpp  engine.hpp  main.cpp  runtime.cpp
Engine/sources/platform/: arch.hpp  clock.hpp  compiler.hpp  defs.hpp  display.cpp  display.hpp  error.cpp  error.hpp  events.hpp  fbconfig.cpp  fbconfig.hpp  file.hpp  glcontext.cpp  glcontext.hpp  glloader.cpp  glloader.hpp  io.cpp  io.hpp  keyboard.cpp  keyboard.hpp  memory.cpp  memory.hpp  mouse.hpp  noncopyable.hpp  nullable.hpp  opengl.hpp  opengl_context.hpp  platform.hpp  platform_detection.hpp  platform_runtime.hpp  result.cpp  result.hpp  screen.cpp  screen.hpp  sleep.hpp  time.hpp  types.hpp  vk_surface.hpp  vulkan.hpp  vulkan_surface.hpp  (+3 more)
Engine/sources/platform/linux/: clock_impl.cpp  display.cpp  display.hpp  display_server.cpp  display_server.hpp  display_x11.cpp  display_x11.hpp  entry_point.cpp  events.cpp  events.hpp  events_x11.cpp  events_x11.hpp  fbconfig_x11.cpp  fbconfig_x11.hpp  file_impl.cpp  file_linux.cpp  glcontext_impl.cpp  glcontext_impl.hpp  glcontext_x11.cpp  glcontext_x11.hpp  glloader_impl.cpp  glloader_x11.cpp  keyboard.cpp  keyboard_impl.cpp  keyboard_x11.cpp  keys.cpp  keys.hpp  keys_x11.cpp  keys_x11.hpp  mouse.cpp  mouse_impl.cpp  mouse_x11.cpp  opengl_context_impl.cpp  opengl_context_impl.hpp  platform.cpp  platform_linux.cpp  screen_impl.cpp  screen_impl.hpp  screen_x11.cpp  screen_x11.hpp  (+11 more)
Engine/sources/platform/macos/: clock_impl.cpp  common.hpp  entry_point.cpp  entry_point.mm  glloader_impl.mm  input_manager.hpp  keyboard_impl.cpp  keys.cpp  keys.hpp  linear_units.h  mouse_impl.cpp  mouse_impl.mm  ns_opengl_context_wrapper.hpp  ns_opengl_context_wrapper.mm  opengl_context_impl.cpp  opengl_context_impl.hpp  opengl_context_impl.mm  screen_impl.cpp  screen_impl.hpp  sx_application.h  sx_application.hpp  sx_application.mm  sx_view.h  sx_view.mm  sx_window.h  sx_window.hpp  sx_window.mm  sx_window_delegate.mm  window_impl.cpp  window_impl.hpp  window_impl.mm  window_system_impl.cpp  window_system_impl.mm
Engine/sources/platform/unix/: file_impl.cpp  memory_impl.cpp  sleep_impl.cpp
Engine/sources/platform/windows/: clock_impl.cpp  display_win32.cpp  display_win32.hpp  entry_point.cpp  events.cpp  events.hpp  events_win32.cpp  events_win32.hpp  file_impl.cpp  glloader_impl.cpp  hinstance.cpp  hinstance.hpp  keyboard.cpp  memory_impl.cpp  mouse.cpp  mouse_impl.cpp  opengl_context_impl.cpp  opengl_context_impl.hpp  platform.cpp  platform_windows.cpp  screen_impl.cpp  screen_impl.hpp  screen_win32.cpp  screen_win32.hpp  sleep_impl.cpp  wgl.cpp  (+10 more)
Engine/sources/servers/: display_server.cpp  display_server.hpp
(+387 files in other folders)
